--- a/public/index.html
+++ b/public/index.html
@@ -57,23 +57,14 @@
 
   <h2>Trade-In Cards</h2>
   <form id="trade-form">
-    <div style="display: flex; align-items: center;"><label for="employeeName"><strong>Employee:</strong></label>
+    <label for="employeeName"><strong>Employee:</strong></label>
     <select name="employeeName" id="employeeName" required style="margin-bottom: 10px;">
       <option value="" disabled selected>Select Employee</option>
       <option value="Alex">Alex</option>
       <option value="Jamie">Jamie</option>
       <option value="Morgan">Morgan</option>
       <option value="Taylor">Taylor</option>
-    </select>
-  <label for="cardType" style="margin-left: 20px;">Card Type:</label>
-  <select id="cardType" name="cardType">
-    <option value="pokemon">Pokémon</option>
-    <option value="magic">Magic: The Gathering</option>
-    <option value="yugioh">Yu-Gi-Oh!</option>
-    <option value="onepiece">One Piece</option>
-    <option value="other">Other</option>
-  </select>
-</div><br>
+    </select><br>
 
 <fieldset>
   <legend><strong>Payout Method:</strong></legend>
